Added Filter to the Sound and the Spotify Playlist Page.
Corrected the way Plugins are instantiated. Changed the Sound class so
tags are searchable.
Soundboards now also will be updated if a spitify playlist is changed.